--- a/server/composer.json
+++ b/server/composer.json
@@ -12,6 +12,7 @@
         "dingo/api": "2.0.0-alpha1"
     },
     "require-dev": {
+        "appzcoder/crud-generator": "^3.0",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
