--- a/web_client/package.json
+++ b/web_client/package.json
@@ -125,8 +125,8 @@
       "import/no-webpack-loader-syntax": 0,
       "import/prefer-default-export": 0,
       "indent": [
-        2,
-        2,
+        4,
+        4,
         {
           "SwitchCase": 1
         }
@@ -225,9 +225,11 @@
     "invariant": "2.2.2",
     "ip": "1.1.5",
     "lodash": "4.17.4",
+    "materialize-css": "^0.100.2",
     "minimist": "1.2.0",
     "prop-types": "15.5.10",
     "react": "15.6.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "15.6.1",
     "react-helmet": "5.1.3",
     "react-intl": "2.3.0",
