--- a/server/composer.json
+++ b/server/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "barryvdh/laravel-cors": "^0.11.0",
+        "dingo/api": "2.0.0-alpha1",
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0",
-        "dingo/api": "2.0.0-alpha1"
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "appzcoder/crud-generator": "^3.0",
