--- a/web_client/package.json
+++ b/web_client/package.json
@@ -25,9 +25,15 @@
     "homepage": "https://github.com/vijayst/react-webpack#readme",
     "dependencies": {
         "eslint": "^4.19.0",
+        "fetch": "^1.1.0",
+        "lodash": "^4.17.5",
+        "minimalistic-assert": "^1.0.0",
+        "obj-filter": "^1.3.1",
+        "path-is-inside": "^1.0.2",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
         "react-router-dom": "^4.2.2",
+        "source-list-map": "^2.0.0",
         "styled-components": "^3.2.3"
     },
     "devDependencies": {
