--- a/web_client/package.json
+++ b/web_client/package.json
@@ -28,6 +28,7 @@
         "fetch": "^1.1.0",
         "lodash": "^4.17.5",
         "minimalistic-assert": "^1.0.0",
+        "node-fetch": "^2.1.1",
         "obj-filter": "^1.3.1",
         "path-is-inside": "^1.0.2",
         "react": "^15.6.1",
@@ -48,7 +49,7 @@
         "extract-text-webpack-plugin": "^3.0.0",
         "file-loader": "^0.11.2",
         "node-sass": "^4.5.3",
-        "react-hot-loader": "next",
+        "react-hot-loader": "^4.0.0",
         "sass-loader": "^6.0.6",
         "style-loader": "^0.18.2",
         "webpack": "^3.5.5",
