--- a/web_client/package.json
+++ b/web_client/package.json
@@ -31,9 +31,11 @@
         "node-fetch": "^2.1.1",
         "obj-filter": "^1.3.1",
         "path-is-inside": "^1.0.2",
+        "pinkie-promise": "^2.0.1",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
         "react-router-dom": "^4.2.2",
+        "sockjs-client": "^1.1.4",
         "source-list-map": "^2.0.0",
         "styled-components": "^3.2.3"
     },
