--- a/web_client/package.json
+++ b/web_client/package.json
@@ -24,6 +24,7 @@
     },
     "homepage": "https://github.com/vijayst/react-webpack#readme",
     "dependencies": {
+        "babel": "^6.23.0",
         "eslint": "^4.19.0",
         "fetch": "^1.1.0",
         "lodash": "^4.17.5",
@@ -32,7 +33,8 @@
         "obj-filter": "^1.3.1",
         "path-is-inside": "^1.0.2",
         "pinkie-promise": "^2.0.1",
-        "react": "^15.6.1",
+        "prop-types": "^15.6.1",
+        "react": "^15.6.2",
         "react-dom": "^15.6.1",
         "react-router-dom": "^4.2.2",
         "sockjs-client": "^1.1.4",
