comment le random peut faire la différence

--- a/web_client/.eslintrc
+++ b/web_client/.eslintrc
@@ -21,6 +21,7 @@
         "module": true,
         "fetch": true,
         "setTimeout": true,
-        "console": true
+        "console": true,
+        "setInterval": true
     }
 }
